0.32.0:
- general:
    - minimum required Python version is now 3.8


0.31.0:
- general:
    - potentially more efficient handling of parallel regions 
    - updated pyproject.toml to be compatible with new Python versions

- fft:
    - bug fix in orthonormalization of type II and III DSTs
    - significantly faster 1D FFTs; tuning of multi-D transforms

- sht:
    - bug fix for alm->map SHTs with nphi=1 and mmax>0
    - new `phi0` parameter for the `*_2d` SHT routines
    - optional `mstart` and `lstride` parameters for the `*_2d` SHT routines


0.30.0:
- general:
    - beginnings of a Rust wrapper

- fft:
    - transforming over a long, contiguous axis in a multi-D array should now
      be faster and scale better with the number of threads.

- sht:
    - new function `pseudo_analysis_general` for iterative least-squares
      analysis of spherical maps on arbitrary grids
    - rework of the general SHT routines, leading to more performance and
      smaller memory footprint
    - SHTs with spin>0 now have a gradient-only mode, which ignores the
      curl a_lm component.
    - new argument `theta_interpol`, which may accelerate SHTs on isolatitude
      grids with irregular theta spacing (most notably Healpix). This is off
      by default, because it only improves performance for fairly large `lmax`,
      and for `nrings>=1.5*lmax`. Only use this after benchmarking your
      particular application!

- totalconvolve:
    - API CHANGE!
      bring interface more in line with SHT functions.
      This basically means replacing the `ofactor` parameter with `sigma_min`,
      `sigma_max` and `npoints`.
      (The old syntax is still supported, but should not be used any longer in
      new projects.)

- misc:
    - new helper functions for CMB lensing simulations
    - new function `preallocate_memory` for benchmarking use, which minimizes
      the amount of time spent passing memory between application and OS.
      Currently only works on Linux.


0.29.0: