@@ -29,6 +29,7 @@
 #define DUCC0_WIGNER3J_H
 
 #include <vector>
+#include "ducc0/infra/mav.h"
 
 namespace ducc0 {
 
@@ -42,10 +43,23 @@ using namespace std;
   The results are returned in \a res, which is resized appropriately.
  */
 void wigner3j (double l2, double l3, double m2, double m3, vector<double> &res);
+void wigner3j (double l2, double l3, double m2, double m3, vmav<double,1> &res);
+/**
+  Compute the Wigner 3j symbols for parameters \a l2, \a l3, \a m2, \a m3
+  following the algorithm in the SLATEC algorithm DRC3JJ.
+  The results are returned in \a res, which is resized appropriately.
+  The l1 value of the first entry in \a res is returned in \a l1min.
+ */
+void wigner3j_int (int l2, int l3, int m2, int m3, int &l1min, vector<double> &res);
+void wigner3j_int (int l2, int l3, int m2, int m3, int &l1min, vmav<double,1> &res);
+
+int wigner3j_ncoef_int(int l2, int l3, int m2, int m3);
 
 }
 
 using detail_wigner3j::wigner3j;
+using detail_wigner3j::wigner3j_int;
+using detail_wigner3j::wigner3j_ncoef_int;
 
 }
 
